hotel project added

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       content="The technical portfolio of AnnaFYZ"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <!-- suppress FOUC-->
+    
     <style>
       html {
         animation: fade-in 1s;
@@ -79,7 +79,7 @@
         <div id="container">
           <button id="previous" type="button"> << </button>
           <div id="project" class="project">
-            <h3 id="title"></h3>
+            <h3 id="title"></h3><span id="id"></span>
             <img id="projectImg">
             <p id="description"></p>
             <a id="gitlink"><img src="/images/GitHub_Logo.png" width="80px"></a><br>
