contact page added

--- a/index.html
+++ b/index.html
@@ -38,17 +38,16 @@
     <script src="/somecode.js" defer></script>
   </head>
   <body>
-    <header>
+    <header class="main-header">
       <h1>Anna</h1>
       <nav>
         <ul>
-          <li><a href="#about">About Me</a></li>
-          <li><a href="#projects">Projects</a></li>
-          <li><a href="#contact">Contact</a></li>
+          <li><a class="header-link" href="#projects">Projects</a></li>
+          <li><a class="header-link" href="/contacts.html">Contact</a></li>
         </ul>
       </nav>
     </header>
-    <main tabindex="0">
+    <main class="homepage" tabindex="0">
       <section id="about">
         <header><h2>About Me</h2></header>
         <p>
@@ -88,18 +87,11 @@
           <button id="next" type="button"> >> </button>
         </div>
       </section>
-      <section id="contact">
-        <header><h2>Contact me</h2></header>
-        <p>
-          email: hrychaniuk@gmail.com<br>
-          LinkedIn: <a href="https://www.linkedin.com/in/anna-hrychaniuk-51b681238">https://www.linkedin.com/in/anna</a>
-          
-        </p>
-      </section>
+     
     </main>
     <footer>
       <h3>
-        <a href="https://github.com/AnnaFYZ/Portfolio"
+        <a href="https://github.com/AnnaFYZ"
           ><svg
             focusable="false"
             role="presentation"
@@ -115,9 +107,9 @@
               fill="currentColor"
             />
           </svg>
-          Read me</a
+          GitHub Link</a
         >
       </h3>
-    </footer>
+      </footer>
   </body>
 </html>
