Corrected HTML so that SEO and Accessibility score was a 100

--- a/index.html
+++ b/index.html
@@ -1,10 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <title>Marcus Zagorski's portfolio</title>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Discover Marcus Zagorski's creative journey from Myspace graphic design to aspiring software developer. Explore a collection of projects showcasing my passion for coding and design. Join me in the exciting world of web development. Let's make something amazing together!"
-    <title>Marcus Zagorski's Portfolio</title>
+    <meta
+      name="description"
+      content="Discover Marcus Zagorski's creative journey from Myspace graphic design to aspiring software developer. Explore a collection of projects showcasing my passion for coding and design. Join me in the exciting world of web development. Let's make something amazing together!"
+    />
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
@@ -12,9 +15,9 @@
 
     <nav class="nav-container">
       <ol class="nav-links">
-        <a href="#"><li>About</li></a>
-        <a href="#"><li>Project</li></a>
-        <a href="#"><li>Contact</li></a>
+        <li><a href="#">About</a></li>
+        <li><a href="#">Project</a></li>
+        <li><a href="#">Contact</a></li>
       </ol>
       <span class="marcus-zagorski">Marcus Zagorski</span>
     </nav>
@@ -59,7 +62,11 @@
 
     <section class="projects-grid">
       <p class="section-titles--">Projects</p>
-      <a href="https://karma-marcuszagorski.netlify.app/" target="_blank" aria-label="karma-logo">
+      <a
+        href="https://karma-marcuszagorski.netlify.app/"
+        target="_blank"
+        aria-label="karma-logo"
+      >
         <svg
           xmlns="http://www.w3.org/2000/svg"
           viewBox="0 0 144 216"
@@ -74,7 +81,11 @@
           />
         </svg>
       </a>
-      <a href="https://karma-marcuszagorski.netlify.app/" target="_blank" aria-label="karma-logo">
+      <a
+        href="https://karma-marcuszagorski.netlify.app/"
+        target="_blank"
+        aria-label="karma-logo"
+      >
         <svg
           xmlns="http://www.w3.org/2000/svg"
           viewBox="0 0 144 216"
@@ -89,7 +100,11 @@
           />
         </svg>
       </a>
-      <a href="https://karma-marcuszagorski.netlify.app/" target="_blank" aria-label="karma-logo">
+      <a
+        href="https://karma-marcuszagorski.netlify.app/"
+        target="_blank"
+        aria-label="karma-logo"
+      >
         <svg
           xmlns="http://www.w3.org/2000/svg"
           viewBox="0 0 144 216"
@@ -104,7 +119,11 @@
           />
         </svg>
       </a>
-      <a href="https://karma-marcuszagorski.netlify.app/" target="_blank" aria-label="karma-logo">
+      <a
+        href="https://karma-marcuszagorski.netlify.app/"
+        target="_blank"
+        aria-label="karma-logo"
+      >
         <svg
           xmlns="http://www.w3.org/2000/svg"
           viewBox="0 0 144 216"
@@ -125,7 +144,11 @@
 
     <section class="contacts-grid">
       <p class="section-titles">Contact</p>
-      <a href="https://github.com/MarcusZagorski" target="_blank" aria-label="github">
+      <a
+        href="https://github.com/MarcusZagorski"
+        target="_blank"
+        aria-label="github"
+      >
         <svg
           class="icons"
           style="
@@ -147,7 +170,11 @@
         </svg>
       </a>
 
-      <a href="https://www.linkedin.com/in/marcus-zagorski" target="_blank" aria-label="linkedin">
+      <a
+        href="https://www.linkedin.com/in/marcus-zagorski"
+        target="_blank"
+        aria-label="linkedin"
+      >
         <svg
           class="icons"
           style="
