Run a W3C Validation check on my HTML & CSS

--- a/index.html
+++ b/index.html
@@ -24,20 +24,18 @@
 
     <!-- Main Section - Introduction -->
 
-    <main>
-      <div class="intro-box">
-        <img
-          src="/marcus-zagorski-portfolio/imgs/picture-of-me.jpg"
-          alt=""
-          class="intro-logo"
-        />
-      </div>
-    </main>
+    <div class="intro-box">
+      <img
+        src="/marcus-zagorski-portfolio/imgs/picture-of-me.jpg"
+        alt=""
+        class="intro-logo"
+      />
+    </div>
 
     <!-- About me section -->
 
-    <section class="aboutme-grid">
-      <p class="section-titles">About me</p>
+    <main class="aboutme-grid">
+      <h2 class="section-titles">About me</h2>
       <div class="aboutme-textbox">
         Hello! I'm Marcus, a passionate coder influenced by my father, a game
         developer in C++ and C#, and an artist with 3D Max Studio skills from
@@ -56,12 +54,12 @@
           <br /><em>Marcus Zagorski</em>
         </p>
       </div>
-    </section>
+    </main>
 
     <!-- Projects section -->
 
     <section class="projects-grid">
-      <p class="section-titles--">Projects</p>
+      <h2 class="section-titles--">Projects</h2>
       <a
         href="https://karma-marcuszagorski.netlify.app/"
         target="_blank"
@@ -143,7 +141,7 @@
     <!-- Contacts section -->
 
     <section class="contacts-grid">
-      <p class="section-titles">Contact</p>
+      <h2 class="section-titles">Contact</h2>
       <a
         href="https://github.com/MarcusZagorski"
         target="_blank"
@@ -160,7 +158,6 @@
           viewBox="0 0 512 512"
           xml:space="preserve"
           xmlns="http://www.w3.org/2000/svg"
-          xmlns:serif="http://www.serif.com/"
           xmlns:xlink="http://www.w3.org/1999/xlink"
         >
           <path
@@ -187,7 +184,6 @@
           viewBox="0 0 512 512"
           xml:space="preserve"
           xmlns="http://www.w3.org/2000/svg"
-          xmlns:serif="http://www.serif.com/"
           xmlns:xlink="http://www.w3.org/1999/xlink"
         >
           <path
