Redirected codewars vector in contact to the correct webpage and changed the path of my personal image

--- a/index.html
+++ b/index.html
@@ -26,11 +26,7 @@
 
     <main>
       <div class="intro-box">
-        <img
-          src="/marcus-zagorski-portfolio/imgs/picture-of-me.jpg"
-          alt=""
-          class="intro-logo"
-        />
+        <img src="/imgs/picture-of-me.jpg" alt="" class="intro-logo" />
       </div>
     </main>
 
