Added shadow effects to the titles of my sections and changed my img picture

--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
 
     <nav class="nav-container">
       <ol class="nav-links">
-        <li><a href="#">About</a></li>
-        <li><a href="#">Project</a></li>
-        <li><a href="#">Contact</a></li>
+        <li><a href="#" class="nav">About</a></li>
+        <li><a href="#" class="nav">Project</a></li>
+        <li><a href="#" class="nav">Contact</a></li>
       </ol>
       <span class="marcus-zagorski">Marcus Zagorski</span>
     </nav>
@@ -25,9 +25,7 @@
     <!-- Main Section - Introduction -->
 
     <main>
-      <div class="intro-box">
-        <img src="/imgs/picture-of-me.jpg" alt="" class="intro-logo" />
-      </div>
+      <div class="intro-logo"></div>
     </main>
 
     <!-- About me section -->
@@ -57,7 +55,7 @@
     <!-- Projects section -->
 
     <section class="projects-grid">
-      <p class="section-titles--">Projects</p>
+      <p class="section-titles">Projects</p>
       <a
         href="https://karma-marcuszagorski.netlify.app/"
         target="_blank"
