projects links to be open in new tab

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
         <div class="project-box">
         <div class="container">
           <div class="item">
-            <a href="https://deploy-preview-51--cyf-module-html-css.netlify.app/wireframe/">
+            <a href="https://deploy-preview-51--cyf-module-html-css.netlify.app/wireframe/" target="_blank">
             <img src="images/project1.png" alt="wireframe project image"></a>
             <h2>Wireframe</h2>
             <p style="text-align: left;">
@@ -67,7 +67,7 @@
               CodeYourFuture to build a web page similar to the sketch.</p>
           </div>
           <div class="item">
-            <a href="https://home-town-abdi-project.netlify.app/">
+            <a href="https://home-town-abdi-project.netlify.app/" target="_blank">
             <img src="images/project2.jpg" alt="My Hometown project image"></a>
             <h2>My Hometown</h2>
             <p style="text-align: left;">
@@ -75,7 +75,7 @@
               and the places where I like to visit</p>
           </div>
           <div class="item">
-            <a href="https://deploy-preview-451--cyf-bfr.netlify.app/">
+            <a href="https://deploy-preview-451--cyf-bfr.netlify.app/" target="_blank">
             <img src="images/project3.png" alt="Bikes for Refugees project image"></a>
             <h2>Bikes for Refugees</h2>
             <p style="text-align: left;">
